[tool.poetry]
name = "bimmertools"
version = "0.0.0"
description = "A simple automatic tool to add playlists and music to BMW cars"
authors = ["MrNadix"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
spotdl = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
